--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -115,6 +115,65 @@
                 <div class="col-md-9">
                                                                             <div class="panel panel-default">
                                 <div class="panel-heading">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank"><b>飞鸟加速</b></a>
+                                </div>
+                                <div class="panel-body">
+                                    
+                                    <dl>
+                                        <dt>资费</dt>
+                                                                                <dd>
+                                            <p>
+                                                <label>基础版-县令：</label> ¥15.00 /月付。 
+                                                                                                每月 150G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>进阶版-知府：</label> ¥25.00 /月付。 
+                                                                                                每月 260G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>高阶版-巡抚：</label> ¥35.00 /月付。 
+                                                                                                每月 370G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                                <dd>
+                                            <p>
+                                                <label>专业版-总督：</label> ¥45.00 /月付。 
+                                                                                                每月 480G 流量; 
+                                                                                                多地跨境高速线路，超低延迟与超高速率; 
+                                                                                                解锁Netfilx，Disney+，Tiktok 等流媒体; 
+                                                                                                专属GPT集群，保证高可用性; 
+                                                                                                可多设备同时使用; 
+                                                                                                专业客服支持; 
+                                                                                            </p>
+                                        </dd>
+                                                                            </dl>
+                                </div>
+                                <div class="panel-footer">
+                                    <a href="javascript:;" class="js_to" data-url="https://xn--yfr044l4qfzsf.com/#/register?code=" data-type="FeiniaoJiasu" data-code="11wam8Ig" target="_blank">点击查看</a>
+                                </div>
+                            </div>
+                            <hr />
+                                                        <div class="panel panel-default">
+                                <div class="panel-heading">
                                     <a href="javascript:;" class="js_to" data-url="https://155.248.222.101/#/register?code=" data-type="Xiyou" data-code="7WiPAwPs" target="_blank"><b>西游云</b></a>
                                 </div>
                                 <div class="panel-body">
@@ -468,16 +527,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-17-node-share-links.htm" title="VPN设备 | 5月17日19.2M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 5月17日19.2M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="VPN设备 | 6月17日20.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 6月17日20.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-16-free-node-subscribe.htm" title="VPN设备 | 6月16日21.3M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 6月16日21.3M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-18-clash-v2ray-ss-ssr.htm" title="VPN设备 | 6月18日21.9M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 6月18日21.9M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-111692.htm" title="动物医院名字创意图片素材大全（动物医院名片设计）">动物医院名字创意图片素材大全（动物医院名片设计）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-24-share-vpn.htm" title="VPN设备 | 6月24日22.1M/S|免费VPN/Clash/SSR/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 6月24日22.1M/S|免费VPN/Clash/SSR/V2ray/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-29-top-vpn-node.htm" title="VPN设备 | 6月29日20.3M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 6月29日20.3M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-free-node-subscribe.htm" title="VPN设备 | 6月19日20.9M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 6月19日20.9M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-27-top-vpn.htm" title="VPN设备 | 6月27日21.3M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 6月27日21.3M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-13-clash-v2ray-ss-ssr.htm" title="VPN设备 | 6月13日22.2M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 6月13日22.2M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-12-node-share-links.htm" title="VPN设备 | 6月12日21.4M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 6月12日21.4M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-free-v2ray-subscribe.htm" title="VPN设备 | 6月14日20.8M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 6月14日20.8M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-3-node-share.htm" title="VPN设备 | 6月3日18.2M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 6月3日18.2M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-15-free-v2ray-subscribe.htm" title="VPN设备 | 6月15日18M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 6月15日18M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-110869.htm" title="动物打疫苗前后要注意什么事项呢（动物接种疫苗前的准备）">动物打疫苗前后要注意什么事项呢（动物接种疫苗前的准备）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-30-free-v2ray.htm" title="VPN设备 | 5月30日20.6M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月30日20.6M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-v2ray.htm" title="VPN设备 | 5月24日22.4M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 5月24日22.4M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-25-free-vpn-node.htm" title="VPN设备 | 6月25日18.4M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享">VPN设备 | 6月25日18.4M/S|免费VPN/Clash/Shadowrocket/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-11-free-high-speed-nodes.htm" title="VPN设备 | 6月11日21.3M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 6月11日21.3M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -489,10 +548,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                     </ul>
     </div>
